re PR target/24718 (Shared libgcc not used for linking by default)

PR target/24718
	* mklibgcc.in: Create dummy object for libgcc_eh.a
	* config/ia64/hpux.h (LIBGCC_SPEC): Remove.

From-SVN: r107090